rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1228_1997_IN-CS2-operationcodes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1228_1997_IN-CS2-operationcodes.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs2_operationcodes {
    extern crate alloc;
    use super::in_cs2_object_identifiers::ROS_INFORMATION_OBJECTS;
    use super::remote_operations_information_objects::Code;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Service management Package"]
    pub static OPCODE_ACTIVATE_SERVICE_FILTERING: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(42))));
    #[doc = " CUSF/SCF interface"]
    pub static OPCODE_ACTIVATION_RECEIVED_AND_AUTHORIZED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(122))));
    #[doc = " Activity Test Package"]
    pub static OPCODE_ACTIVITY_TEST: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(55))));
    pub static OPCODE_ANALYSE_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(28))));
    pub static OPCODE_ANALYSED_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(3))));
    #[doc = " Charging Package"]
    pub static OPCODE_APPLY_CHARGING: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(35))));
    pub static OPCODE_APPLY_CHARGING_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(36))));
    #[doc = " SCF/SRF activation of assist Package"]
    pub static OPCODE_ASSIST_REQUEST_INSTRUCTIONS: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(16))));
    pub static OPCODE_ASSOCIATION_RELEASE_REQUESTED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(124))));
    pub static OPCODE_AUTHORIZE_TERMINATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(87))));
    #[doc = " Traffic management Package"]
    pub static OPCODE_CALL_GAP: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(41))));
    #[doc = " Call report Package"]
    pub static OPCODE_CALL_INFORMATION_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(44))));
    pub static OPCODE_CALL_INFORMATION_REQUEST: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(45))));
    #[doc = " Cancel Package"]
    pub static OPCODE_CANCEL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(53))));
    pub static OPCODE_CANCEL_STATUS_REPORT_REQUEST: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(54))));
    #[doc = " SSF call processing Package"]
    pub static OPCODE_COLLECT_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(27))));
    pub static OPCODE_COLLECTED_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(2))));
    pub static OPCODE_COMPONENT_RECEIVED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(125))));
    pub static OPCODE_CONFIRMED_NOTIFICATION_PROVIDED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(117))));
    pub static OPCODE_CONFIRMED_REPORT_CHARGING_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(119))));
    #[doc = " Connect Package (elementary SSF function)"]
    pub static OPCODE_CONNECT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(20))));
    #[doc = " Non-assisted connection establishment Package"]
    pub static OPCODE_CONNECT_TO_RESOURCE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(19))));
    pub static OPCODE_CONTINUE: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(31))));
    #[doc = " CPH Response Package"]
    pub static OPCODE_CONTINUE_WITH_ARGUMENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(88))));
    pub static OPCODE_CREATE_CALL_SEGMENT_ASSOCIATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(89))));
    pub static OPCODE_D_FCWITH_ARGUMENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(86))));
    #[doc = " Generic disconnect resource Package"]
    pub static OPCODE_DISCONNECT_FORWARD_CONNECTION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(18))));
    pub static OPCODE_DISCONNECT_LEG: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(90))));
    #[doc = " Exception Inform Package"]
    pub static OPCODE_ENTITY_RELEASED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(96))));
    #[doc = " SCF/SCF interface"]
    pub static OPCODE_ESTABLISH_CHARGING_RECORD: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(112))));
    #[doc = " Assist connection establishment Package"]
    pub static OPCODE_ESTABLISH_TEMPORARY_CONNECTION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(17))));
    pub static OPCODE_EVENT_NOTIFICATION_CHARGING: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(26))));
    pub static OPCODE_EVENT_REPORT_BCSM: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(24))));
    pub static OPCODE_EVENT_REPORT_FACILITY: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(104))));
    pub static OPCODE_FACILITY_SELECTED_AND_AVAILABLE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(80))));
    #[doc = " Billing Package"]
    pub static OPCODE_FURNISH_CHARGING_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(34))));
    pub static OPCODE_HANDLING_INFORMATION_REQUEST: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(113))));
    pub static OPCODE_HANDLING_INFORMATION_RESULT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(114))));
    #[doc = " Call handling Package (elementary SSF function)"]
    pub static OPCODE_HOLD_CALL_IN_NETWORK: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(21))));
    #[doc = " the operations are grouped by the identified operation packages."]
    #[doc = " SCF activation Package"]
    pub static OPCODE_INITIAL_DP: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(0))));
    pub static OPCODE_INITIATE_ASSOCIATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(123))));
    #[doc = " SCF call initiation Package"]
    pub static OPCODE_INITIATE_CALL_ATTEMPT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(32))));
    #[doc = " Trigger Management Package"]
    pub static OPCODE_MANAGE_TRIGGER_DATA: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(97))));
    pub static OPCODE_MERGE_CALL_SEGMENTS: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(91))));
    pub static OPCODE_MOVE_CALL_SEGMENTS: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(92))));
    pub static OPCODE_MOVE_LEG: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(93))));
    pub static OPCODE_NETWORK_CAPABILITY: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(115))));
    pub static OPCODE_NOTIFICATION_PROVIDED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(116))));
    pub static OPCODE_O_ABANDON: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(83))));
    pub static OPCODE_O_ANSWER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(7))));
    pub static OPCODE_O_CALLED_PARTY_BUSY: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(5))));
    pub static OPCODE_O_DISCONNECT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(8))));
    #[doc = " Advanced BCP DP Package"]
    pub static OPCODE_O_MID_CALL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(14))));
    pub static OPCODE_O_NO_ANSWER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(6))));
    pub static OPCODE_O_SUSPENDED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(84))));
    pub static OPCODE_ORIGINATION_ATTEMPT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(81))));
    #[doc = " Basic BCP DP Package"]
    pub static OPCODE_ORIGINATION_ATTEMPT_AUTHORIZED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(1))));
    #[doc = " Specialized resource control Package"]
    pub static OPCODE_PLAY_ANNOUNCEMENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(47))));
    pub static OPCODE_PROMPT_AND_COLLECT_USER_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(48))));
    #[doc = " SRF/SCF interface"]
    pub static OPCODE_PROMPT_AND_RECEIVE_MESSAGE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(107))));
    pub static OPCODE_PROVIDE_USER_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(118))));
    pub static OPCODE_RECONNECT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(94))));
    pub static OPCODE_RELEASE_ASSOCIATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(126))));
    pub static OPCODE_RELEASE_CALL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(22))));
    pub static OPCODE_REPORT_CHARGING_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(120))));
    pub static OPCODE_REPORT_UTSI: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(101))));
    #[doc = " Status reporting Package"]
    pub static OPCODE_REQUEST_CURRENT_STATUS_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(37))));
    pub static OPCODE_REQUEST_EVERY_STATUS_CHANGE_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(38))));
    pub static OPCODE_REQUEST_FIRST_STATUS_MATCH_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(39))));
    pub static OPCODE_REQUEST_NOTIFICATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(121))));
    #[doc = " Charging Event handling Package"]
    pub static OPCODE_REQUEST_NOTIFICATION_CHARGING_EVENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(25))));
    #[doc = " BCSM Event handling Package"]
    pub static OPCODE_REQUEST_REPORT_BCSMEVENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(23))));
    pub static OPCODE_REQUEST_REPORT_BCUSMEVENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(127))));
    pub static OPCODE_REQUEST_REPORT_FACILITY_EVENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(103))));
    #[doc = " USI Handling Package"]
    pub static OPCODE_REQUEST_REPORT_UTSI: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(98))));
    #[doc = " Timer Package"]
    pub static OPCODE_RESET_TIMER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(33))));
    pub static OPCODE_ROUTE_SELECT_FAILURE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(4))));
    pub static OPCODE_SCRIPT_CLOSE: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(111))));
    pub static OPCODE_SCRIPT_EVENT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(109))));
    pub static OPCODE_SCRIPT_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(108))));
    pub static OPCODE_SCRIPT_RUN: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(110))));
    pub static OPCODE_SELECT_FACILITY: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(30))));
    pub static OPCODE_SELECT_ROUTE: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(29))));
    #[doc = " Signalling control Package"]
    pub static OPCODE_SEND_CHARGING_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(46))));
    pub static OPCODE_SEND_COMPONENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(130))));
    #[doc = " Facility IE Handling Package"]
    pub static OPCODE_SEND_FACILITY_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(102))));
    pub static OPCODE_SEND_STUI: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(100))));
    pub static OPCODE_SERVICE_FILTERING_RESPONSE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(43))));
    pub static OPCODE_SPECIALIZED_RESOURCE_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(49))));
    pub static OPCODE_SPLIT_LEG: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(95))));
    pub static OPCODE_STATUS_REPORT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(40))));
    pub static OPCODE_T_ANSWER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(12))));
    pub static OPCODE_T_BUSY: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(10))));
    pub static OPCODE_T_DISCONNECT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(13))));
    pub static OPCODE_T_MID_CALL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(15))));
    pub static OPCODE_T_NO_ANSWER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(11))));
    pub static OPCODE_T_SUSPENDED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(85))));
    pub static OPCODE_TERM_ATTEMPT_AUTHORIZED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(9))));
    pub static OPCODE_TERMINATION_ATTEMPT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(82))));
}
