rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1238.1_2000_IN-CS3-common-classes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1238.1_2000_IN-CS3-common-classes.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve reference of ElsewhereDefined: CriticalityType
LinkerError in ASN grammar: Failed to resolve reference of ElsewhereDefined: CriticalityType


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs3_common_classes {
    extern crate alloc;
    use super::in_cs3_common_datatypes::CriticalityType;
    use super::in_cs3_object_identifiers::{
        COMMON_DATATYPES, ID_PACKAGE_EMPTY_CONNECTION, ID_ROS_OBJECT_CUSF, ID_ROS_OBJECT_SCF,
        ID_ROS_OBJECT_SDF, ID_ROS_OBJECT_SRF, ID_ROS_OBJECT_SSF, ROS_INFORMATION_OBJECTS,
        ROS_USEFUL_DEFINITIONS, SCF_CUSF_PROTOCOL, SCF_SCF_PROTOCOL, SCF_SDF_PROTOCOL,
        SCF_SRF_PROTOCOL, SDF_SDF_PROTOCOL, SSF_SCF_PROTOCOL,
    };
    use super::in_cs3_scf_cusf_protocol::{
        CS3CUSFSCF_DPSPECIFIC_CONTRACT, CS3CUSFSCF_GENERIC_CONTRACT,
        CS3SCFCUSF_DPSPECIFIC_CONTRACT, CS3SCFCUSF_GENERIC_CONTRACT,
    };
    use super::in_cs3_scf_scf_pkgs_contracts_acs::{DSSP_CONTRACT, SCF_SCF_CONTRACT};
    use super::in_cs3_scf_sdf_protocol::{DAP_CONTRACT, DAP_EXECUTE_CONTRACT, TFC_CONTRACT};
    use super::in_cs3_scf_srf_pkgs_contracts_acs::SRF_SCF_CONTRACT;
    use super::in_cs3_sdf_sdf_protocol::{
        INDSP_CONTRACT, SHADOW_CONSUMER_CONTRACT, SHADOW_SUPPLIER_CONTRACT,
    };
    use super::in_cs3_ssf_scf_pkgs_contracts_acs::{
        IN_CS3_ASSIST_HANDOFF_SSF_TO_SCF, IN_CS3_SCF_TO_SSF_DP_SPECIFIC, IN_CS3_SCF_TO_SSF_GENERIC,
        IN_CS3_SCF_TO_SSF_SERVICE_MANAGEMENT, IN_CS3_SCF_TO_SSF_STATUS_REPORTING,
        IN_CS3_SCF_TO_SSF_TRAFFIC_MANAGEMENT, IN_CS3_SCF_TO_SSF_TRIGGER_MANAGEMENT,
        IN_CS3_SSF_TO_SCF_DP_SPECIFIC, IN_CS3_SSF_TO_SCF_GENERIC,
        IN_CS3_SSF_TO_SCF_SERVICE_MANAGEMENT,
    };
    use super::remote_operations_information_objects::*;
    use super::remote_operations_useful_definitions::EMPTY_BIND;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
