rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1238.1_2000_IN-CS3-common-datatypes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1238.1_2000_IN-CS3-common-datatypes.asn1
---
Warnings:
NotYetInplemented in ASN grammar: Value references of path length > 2 are not yet supported! Found reference b1.&.numOfExtensions


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs3_common_datatypes {
    extern crate alloc;
    use super::in_cs3_common_classes::*;
    use super::in_cs3_object_identifiers::COMMON_CLASSES;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum CriticalityType {
        ignore = 0,
        abort = 1,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct ExtensionField {
        #[rasn(identifier = "type")]
        pub r_type: Any,
        #[rasn(default = "extension_field_criticality_default")]
        pub criticality: CriticalityType,
        #[rasn(tag(context, 1))]
        pub value: Any,
    }
    impl ExtensionField {
        pub fn new(r_type: Any, criticality: CriticalityType, value: Any) -> Self {
            Self {
                r_type,
                criticality,
                value,
            }
        }
    }
    fn extension_field_criticality_default() -> CriticalityType {
        CriticalityType::ignore
    }
    #[doc = "This parameter indicates an extension of an argument data type. Its content is network operator specific"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=2147483647"))]
    pub struct Integer4(pub u32);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("-128..=127"))]
    pub struct InvokeID(pub i8);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum UnavailableNetworkResource {
        unavailableResources = 0,
        componentFailure = 1,
        basicCallProcessingException = 2,
        resourceStatusFailure = 3,
        endUserFailure = 4,
        screening = 5,
    }
}
