rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1238.1_2000_IN-CS3-errorcodes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1238.1_2000_IN-CS3-errorcodes.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs3_errorcodes {
    extern crate alloc;
    use super::in_cs3_object_identifiers::ROS_INFORMATION_OBJECTS;
    use super::remote_operations_information_objects::Code;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static ERRCODE_CANCEL_FAILED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(1))));
    pub static ERRCODE_CANCELED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(0))));
    pub static ERRCODE_CHAINING_REFUSED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(23))));
    pub static ERRCODE_E_TCFAILED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(3))));
    pub static ERRCODE_EXECUTION_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(10))));
    pub static ERRCODE_IMPROPER_CALLER_RESPONSE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(4))));
    pub static ERRCODE_MISSING_CUSTOMER_RECORD: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(6))));
    pub static ERRCODE_MISSING_PARAMETER: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(7))));
    pub static ERRCODE_PARAMETER_OUT_OF_RANGE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(8))));
    pub static ERRCODE_REQUESTED_INFO_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(10))));
    #[doc = " Error codes for the IN CS2 error types follow"]
    pub static ERRCODE_SCF_REFERRAL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(21))));
    pub static ERRCODE_SCF_TASK_REFUSED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(22))));
    pub static ERRCODE_SYSTEM_FAILURE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(11))));
    pub static ERRCODE_TASK_REFUSED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(12))));
    pub static ERRCODE_UNAVAILABLE_RESOURCE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(13))));
    pub static ERRCODE_UNEXPECTED_COMPONENT_SEQUENCE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(14))));
    pub static ERRCODE_UNEXPECTED_DATA_VALUE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(15))));
    pub static ERRCODE_UNEXPECTED_PARAMETER: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(16))));
    pub static ERRCODE_UNKNOWN_LEG_ID: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(17))));
    pub static ERRCODE_UNKNOWN_RESOURCE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(18))));
}
