rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1238.1_2000_IN-CS3-errortypes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1238.1_2000_IN-CS3-errortypes.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve supertype OPTIONALLY-PROTECTED of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype OPTIONALLY-PROTECTED of parameterized implementation.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs3_errortypes {
    extern crate alloc;
    use super::directory_abstract_service::{
        CommonResults, SecurityParameters, SecurityProblem, ServiceProblem, Versions,
    };
    use super::distributed_operations::AccessPointInformation;
    use super::enhanced_security::*;
    use super::in_cs3_common_datatypes::{InvokeID, UnavailableNetworkResource};
    use super::in_cs3_errorcodes::{
        ERRCODE_CANCELED, ERRCODE_CANCEL_FAILED, ERRCODE_CHAINING_REFUSED, ERRCODE_EXECUTION_ERROR,
        ERRCODE_E_TCFAILED, ERRCODE_IMPROPER_CALLER_RESPONSE, ERRCODE_MISSING_CUSTOMER_RECORD,
        ERRCODE_MISSING_PARAMETER, ERRCODE_PARAMETER_OUT_OF_RANGE, ERRCODE_REQUESTED_INFO_ERROR,
        ERRCODE_SCF_REFERRAL, ERRCODE_SCF_TASK_REFUSED, ERRCODE_SYSTEM_FAILURE,
        ERRCODE_TASK_REFUSED, ERRCODE_UNAVAILABLE_RESOURCE, ERRCODE_UNEXPECTED_COMPONENT_SEQUENCE,
        ERRCODE_UNEXPECTED_DATA_VALUE, ERRCODE_UNEXPECTED_PARAMETER, ERRCODE_UNKNOWN_LEG_ID,
        ERRCODE_UNKNOWN_RESOURCE,
    };
    use super::in_cs3_object_identifiers::{
        COMMON_DATATYPES, DS_USEFUL_DEFINITIONS, ERRORCODES, ROS_INFORMATION_OBJECTS,
        SCF_SCF_CLASSES, SCF_SCF_OPERATIONS, SDF_SDF_OPERATIONS, SPKM_GSS_TOKENS, TC_MESSAGES,
    };
    use super::in_cs3_scf_scf_classes::*;
    use super::remote_operations_information_objects::*;
    use super::spkm_gss_tokens::*;
    use super::useful_definitions::{
        DIRECTORY_ABSTRACT_SERVICE, DISTRIBUTED_OPERATIONS, ENHANCED_SECURITY,
    };
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " The executionError is returned by an Execute operation in the case of the operation is not completing."]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ExecutionProblem(pub Integer);
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set)]
    pub struct FailureReasonSecurityError {
        #[rasn(tag(context, 0))]
        pub problem: SecurityProblem,
        #[rasn(tag(context, 1), identifier = "spkmInfo")]
        pub spkm_info: SPKMERROR,
    }
    impl FailureReasonSecurityError {
        pub fn new(problem: SecurityProblem, spkm_info: SPKMERROR) -> Self {
            Self { problem, spkm_info }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum FailureReason {
        #[rasn(tag(context, 0))]
        systemFailure(UnavailableNetworkResource),
        #[rasn(tag(context, 1))]
        scfTaskRefused(ScfTaskRefusedParameter),
        #[rasn(tag(context, 2))]
        securityError(FailureReasonSecurityError),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ReferralParameter(pub OPTIONALLYPROTECTED);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ScfTaskRefusedParameter(pub OPTIONALLYPROTECTED);
}
