rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1238.2_2000_IN-CS3-SSF-SCF-Classes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1238.2_2000_IN-CS3-SSF-SCF-Classes.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs3_ssf_scf_classes {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
