rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1238.2_2000_IN-CS3-SSF-SCF-pkgs-contracts-acs.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1238.2_2000_IN-CS3-SSF-SCF-pkgs-contracts-acs.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 316, column 2]
     │
     │ 
 315 │  -- Contracts
 316 │  inCs3SsfToScfGeneric CONTRACT ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 317 │    -- dialogue initiated by SSF with InitialDP Operation
 318 │    --The inCs3SsfToScfGeneric contract expresses the form of the service in which the SSF,
 319 │    --a ROS object of class ssf, initiates the generic triggering approach contract.
 320 │    --A ROS-object of class scf, responds to this contract.
 321 │    INITIATOR CONSUMER OF
 322 │      {activityTestPackage | exceptionInformPackage{networkSpecificB2} |
 323 │        scfActivationPackage{networkSpecificB1, networkSpecificB2}}
 324 │    RESPONDER CONSUMER OF
 325 │      {activityTestPackage |
 326 │        assistConnectionEstablishmentPackage{networkSpecificB1,
 327 │                                            networkSpecificB2} |
 328 │        bcsmEventHandlingPackage{networkSpecificB1, networkSpecificB2} |
 329 │        billingPackage{networkSpecificB2} |
 330 │        callHandlingPackage{networkSpecificB2} |
 331 │        callReportPackage{networkSpecificB1, networkSpecificB2} |
 332 │        cancelPackage{networkSpecificB2} |
 333 │        chargingEventHandlingPackage{networkSpecificB1, networkSpecificB2} |
 334 │        chargingPackage{networkSpecificB1, networkSpecificB2} |
 335 │        connectPackage{networkSpecificB1, networkSpecificB2} |
 336 │        cphResponsePackage{networkSpecificB1, networkSpecificB2} |
 337 │        facilityIEHandlingPackage{networkSpecificB1} |
 338 │        genericDisconnectResourcePackage{networkSpecificB1, networkSpecificB2} |
 339 │        nonAssistedConnectionEstablishmentPackage{networkSpecificB1,
 340 │                                                 networkSpecificB2} |
 341 │        signallingControlPackage{networkSpecificB1, networkSpecificB2} |
 342 │        specializedResourceControlPackage{networkSpecificB1, networkSpecificB2,
 343 │                                         networkSpecificB3} |
 344 │        scriptControlPackage{networkSpecificB1, networkSpecificB2} |
 345 │        messageControlPackage{networkSpecificB1, networkSpecificB2,
 346 │                             networkSpecificB3} |
 347 │        ssfCallProcessingPackage{networkSpecificB1, networkSpecificB2} |
 348 │        statusReportingPackage{networkSpecificB1, networkSpecificB2} |
 349 │        timerPackage{networkSpecificB1, networkSpecificB2} |
 350 │        trafficManagementPackage{networkSpecificB1, networkSpecificB2,
 351 │                                networkSpecificB3} |
 352 │        uSIHandlingPackage{networkSpecificB1, networkSpecificB2} |
 353 │        scfCallInitiationPackage{networkSpecificB1, networkSpecificB2} |
 354 │        triggerCallManagementPackage{networkSpecificB1, networkSpecificB2}}
 355 │    ID                     id-inCs3SsfToScfGeneric
 356 │  }
     │
─────╯
